# s8_pose

./: CMakeLists.txt  package.xml
include/s8_pose/: pose_node.h
src/: pose_node.cpp
srv/: setOrientation.srv  setPosition.srv
